--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
   },
   "homepage": "https://gitlab.com/pushrocks/tapbuffer#README",
   "dependencies": {
+    "beautylog": "^6.1.1",
     "gulp-function": "^2.2.3",
     "smartinject": "^1.0.1",
-    "smartipc": "^1.0.4",
+    "smartipc": "^1.0.8",
     "smartq": "^1.1.1",
-    "tap": "^10.3.0",
+    "tap-mocha-reporter": "^3.0.3",
     "typings-global": "^1.0.14"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "tapbundle": "^1.0.3",
     "typings-test": "^1.0.3"
   }
 }
