--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "homepage": "https://gitlab.com/pushrocks/tapbuffer#README",
   "dependencies": {
+    "@types/istanbul": "^0.4.29",
     "beautylog": "^6.1.1",
     "gulp-function": "^2.2.3",
+    "istanbul": "^0.4.5",
     "smartinject": "^1.0.1",
-    "smartipc": "^1.0.8",
+    "smartipc": "^1.0.9",
     "smartq": "^1.1.1",
     "tap-mocha-reporter": "^3.0.3",
     "typings-global": "^1.0.14"
