--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "beautylog": "^6.1.1",
     "gulp-function": "^2.2.3",
     "istanbul": "^0.4.5",
+    "smartfile": "^4.1.7",
     "smartinject": "^1.0.1",
     "smartipc": "^1.0.9",
     "smartq": "^1.1.1",
