--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "smartinject": "^1.0.1",
     "smartipc": "^1.0.9",
     "smartq": "^1.1.1",
+    "source-map-support": "^0.4.15",
     "tap-mocha-reporter": "^3.0.3",
     "typings-global": "^1.0.14"
   },
