--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "remap-istanbul": "^0.9.5",
     "smarterror": "^1.0.3",
     "smartfile": "^4.2.17",
-    "smartinject": "^1.0.6",
+    "smartinject": "^1.0.12",
     "smartipc": "^1.0.9",
     "smartq": "^1.1.6",
     "smartshell": "^1.0.13",
@@ -42,7 +42,6 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "tapbundle": "^1.1.1",
-    "typings-test": "^1.0.3"
+    "tapbundle": "^1.1.1"
   }
 }
